# BoringLang

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
apps/: CMakeLists.txt  main.cpp
apps/compiler/: main.cpp
apps/vm/: main.cpp
include/boringlang/memory/: Object.hpp  ObjectHeader.hpp  SlotOperation.hpp  Types.hpp
include/boringlang/structure/: Class.hpp  Namespace.hpp  Namespaceable.hpp
include/compiler/boringlang/compiler/: Compiler.hpp
include/core/boringlang/core/: Class.hpp  ClassFile.hpp  ClassFormat.hpp  ClassLoader.hpp  Constants.hpp  Format.hpp  InstanceVariable.hpp  InstanceVariableFormat.hpp  Method.hpp  MethodFormat.hpp  Namespace.hpp  NamespacePath.hpp  Namespaceable.hpp  Types.hpp
include/core/boringlang/core/util/: BinaryStreamUtil.hpp  StringUtil.hpp  TypesUtil.hpp
include/vm/boringlang/vm/: VM.hpp
include/vm/boringlang/vm/interpreter/: Interpreter.hpp
include/vm/boringlang/vm/memory/: MemoryManager.hpp
src/: CMakeLists.txt  Object.cpp
src/compiler/: Compiler.cpp
src/core/: Class.cpp  ClassFile.cpp  ClassLoader.cpp  Method.cpp  Namespace.cpp  NamespacePath.cpp  Namespaceable.cpp
src/core/util/: BinaryStreamUtil.cpp  StringUtil.cpp  TypesUtil.cpp
src/memory/: ObjectHeader.cpp
src/structure/: Class.cpp  Namespace.cpp  Namespaceable.cpp
src/vm/: VM.cpp
src/vm/interpreter/: Interpreter.cpp
src/vm/memory/: MemoryManager.cpp
tests/: CMakeLists.txt  test.cpp
tests/core/: classFileTest.cpp  headerTests.cpp  namespaceTests.cpp
tests/memory/: slotOperation.cpp
